// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorComponent should match the snapshot for a desktop viewport 1`] = `
<div>
  <div
    class="page fr-m-auto fr-mt-8w"
  >
    <h1
      class="title fr-text--bold fr-px-2w text-center"
    >
      Une erreur est survenue lors de la connexion.
    </h1>
    <div
      class="fr-mx-auto fr-my-4w fr-px-2w fr-text--lg"
    >
      <p
        class="fr-mb-4w fr-text--bold"
      >
        Description de l’erreur :
      </p>
      <p
        class="fr-mb-8w"
        data-testid="error-message"
      >
        any-error-message
      </p>
      <p
        class="fr-mb-4w fr-text--bold"
      >
        Que faire ?
      </p>
      <p
        class="fr-mb-4w"
      >
        Fermez l’onglet de votre navigateur et reconnectez-vous en cliquant sur le bouton AgentConnect.
      </p>
      <p
        class="fr-mb-4w"
      >
        Contactez le support de votre service si le problème persiste.
      </p>
      <div
        class="details fr-p-3w"
      >
        <p>
          Informations à nous transmettre dans le mail pour faciliter la prise en charge de votre demande :
        </p>
        <p
          data-testid="error-code"
        >
          <strong>
            Code d’erreur :
          </strong>
           
          any-error-code
        </p>
        <p
          class="fr-my-0"
          data-testid="error-session-id"
        >
          <strong>
            ID :
          </strong>
           
          any-error-id
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorComponent should match the snapshot for a tablet viewport 1`] = `
<div>
  <div
    class="page fr-m-auto fr-mt-4w"
  >
    <h1
      class="title fr-text--bold fr-px-2w text-left"
    >
      Une erreur est survenue lors de la connexion.
    </h1>
    <div
      class="fr-mx-auto fr-my-4w fr-px-2w fr-text--lg"
    >
      <p
        class="fr-mb-4w fr-text--bold"
      >
        Description de l’erreur :
      </p>
      <p
        class="fr-mb-8w"
        data-testid="error-message"
      >
        any-error-message
      </p>
      <p
        class="fr-mb-4w fr-text--bold"
      >
        Que faire ?
      </p>
      <p
        class="fr-mb-4w"
      >
        Fermez l’onglet de votre navigateur et reconnectez-vous en cliquant sur le bouton AgentConnect.
      </p>
      <p
        class="fr-mb-4w"
      >
        Contactez le support de votre service si le problème persiste.
      </p>
      <div
        class="details fr-p-3w"
      >
        <p>
          Informations à nous transmettre dans le mail pour faciliter la prise en charge de votre demande :
        </p>
        <p
          data-testid="error-code"
        >
          <strong>
            Code d’erreur :
          </strong>
           
          any-error-code
        </p>
        <p
          class="fr-my-0"
          data-testid="error-session-id"
        >
          <strong>
            ID :
          </strong>
           
          any-error-id
        </p>
      </div>
    </div>
  </div>
</div>
`;
